<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uwyo.kchawla.anothertipcalculator.InputFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/billLabel"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginLeft="32dp"
        android:text="@string/billLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/billEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.00"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toRightOf="@+id/billLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="237dp" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginLeft="32dp"
        android:text="@string/percentLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/percentEditText"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="number"
        android:text="18"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toRightOf="@+id/percentLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billEditText"
        tools:layout_editor_absoluteX="239dp" />

    <TextView
        android:id="@+id/splitLabel"
        android:layout_width="87dp"
        android:layout_height="28dp"
        android:layout_marginLeft="32dp"
        android:text="@string/splitLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/splitEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/splitEditText"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toRightOf="@+id/splitLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentEditText"
        tools:layout_editor_absoluteX="203dp" />

    <RadioGroup
        android:id="@+id/roundRadioGroup"
        android:layout_width="242dp"
        android:layout_height="94dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitEditText">

        <RadioButton
            android:id="@+id/noRoundRbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noRoundText" />

        <RadioButton
            android:id="@+id/roundTipRbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roundTipText" />

        <RadioButton
            android:id="@+id/roundTotalRbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roundTotalText" />

    </RadioGroup>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-7dp"
        android:layout_marginRight="-61dp"
        android:layout_weight="1"
        android:text="@string/calculateButtonText"
        app:layout_constraintBottom_toBottomOf="@+id/roundRadioGroup"
        app:layout_constraintRight_toRightOf="@+id/splitEditText" />

</android.support.constraint.ConstraintLayout>
