<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/outputTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/outputTipLabelText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputTipResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:text="@string/uninitializedText"
        app:layout_constraintBaseline_toBaselineOf="@+id/outputTipLabel"
        app:layout_constraintLeft_toLeftOf="@+id/outputTotalResultText" />

    <TextView
        android:id="@+id/outputTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/outputTotalLabelText"
        app:layout_constraintLeft_toLeftOf="@+id/outputTipLabel"
        app:layout_constraintTop_toBottomOf="@+id/outputTipLabel" />

    <TextView
        android:id="@+id/outputTotalResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/uninitializedText"
        app:layout_constraintLeft_toRightOf="@+id/outputTotalLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/outputTotalLabel" />
</android.support.constraint.ConstraintLayout>
